fix: add gap to form-item for improved spacing

--- a/src/app/components/formulario-registrar-saida/formulario-registrar-saida.component.scss
+++ b/src/app/components/formulario-registrar-saida/formulario-registrar-saida.component.scss
@@ -12,4 +12,5 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 1rem;
+    gap: 0.5rem;
 }
